card page and nutribudy and add product

--- a/src/pages/Products/CartProducts.module.css
+++ b/src/pages/Products/CartProducts.module.css
@@ -1,6 +1,6 @@
 
 
-.ItemSlide ion-label {
+/* .ItemSlide ion-label {
     display: flex !important;
     width: 100%;
     max-width: 100% !important;
@@ -9,7 +9,7 @@
     margin: 0;
     padding: 16px 0;
     justify-content: space-between;
-}
+} */
 
 .productDetails {
     display: flex;
