--- a/src/theme/global.css
+++ b/src/theme/global.css
@@ -3030,3 +3030,19 @@ label.N-EditProfile {
   object-fit: cover;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
+.qwt-select{
+  width: 100%;
+  border-radius: 0px;
+}
+.AddVariant{
+  display: flex;
+  gap: 10px !important;
+  align-items: center;
+}
+.CardAdd{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding-bottom: 10px;
+}
