--- a/src/theme/global.css
+++ b/src/theme/global.css
@@ -2866,8 +2866,13 @@ ul.Recipe-Star li {
   display: flex;
   flex-direction: column;
   align-items: end;
-  gap: 3px;
 }
+.RangeTypelabel{
+  display: flex;
+  justify-content: end;
+  align-items: end;
+}
+
 .N-profileInput ion-input {
   border: 1px solid #ccc;
 }
@@ -2880,7 +2885,7 @@ ul.Recipe-Star li {
   margin: auto;
   width: 100%;
 }
-.OTPverify {
+/* .OTPverify {
   display: flex;
   align-items: center;
   justify-content: left;
@@ -2893,7 +2898,7 @@ ul.Recipe-Star li {
 }
 .OTPverify input {
   padding: 10px !important;
-}
+} */
 label.N-EditProfile {
   width: 30px;
   height: 30px;
@@ -2961,27 +2966,26 @@ label.N-EditProfile {
   gap: 10px;
   align-items: center;
 }
-.ImgIcon ion-button{
-    width: 80px;
-    height: 70px;
+.ImgIcon ion-icon{
+   padding:20px;
     background-color: #9a1504;
     border-radius: 10px;
-}
-.ImgIcon {
-  text-align: center;
-  max-width: 100px;
-}
-.ImgIcon ion-button ion-icon {
-  font-size: 40px !important;
+    font-size: 40px !important;
+    color: #fff !important;
+    
 }
 .ImgIcon ion-title {
   white-space: normal;
   font-size: 14px;
   padding-top: 5px;
+  text-align: center;
 }
 .Orangebtn {
   background-color: #ffa500 !important;
   color: #fff;
+}
+.Orangebtn ion-icon{
+  padding: 20px;
 }
 .SkipBtn{
   display: flex;
@@ -3000,8 +3004,10 @@ label.N-EditProfile {
 }
 .DietPreFerns {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
-  gap: 20px;
+  justify-content: center;
+  gap: 15px;
   width: 100%;
 }
 .FillCheckBox{
@@ -3012,7 +3018,7 @@ label.N-EditProfile {
   
 }
 .FillCheckBox img{
-  width: 90px;
+  width: 100%;
   object-fit: cover;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
@@ -3032,7 +3038,40 @@ label.N-EditProfile {
   width: 100%;
   padding-bottom: 10px;
 }
+.StatementInfo {
+  white-space: break-spaces !important;
+}
+.ImgCheck ion-button {
+  width: 100px;
+  height: 70px;
+  border-radius: 10px;
+}
+.UploadPicture ion-button{
+background-color: #ccc;
+border-radius: 10px;
+}
+.UploadPicture input[type="text"]{
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+ margin-top: 10px;
+}
 
+.ImgCheck {
+    text-align: center;
+    max-width: 100px;
+    min-height: 110px;
+}
+
+.ImgCheck ion-button ion-icon {
+  font-size: 40px !important;
+}
+.ImgCheck ion-title {
+  white-space: normal;
+  font-size: 14px;
+  padding-top: 5px;
+}
+.ImgCheck ion-checkbox{
+  display: none;
+}
 /* Add product Modal start */
 
 .add-modal {
@@ -3073,3 +3112,58 @@ label.N-EditProfile {
   border-radius: 10px;
 }
 /* Add product Modal end */
+.ProgressBar .no-thumb::-webkit-slider-thumb {
+  display: none;
+}
+
+.ProgressBar ion-range{
+  width: 100%;
+}
+.range-custom-height {
+  height: 10px;
+  color: red;
+}
+.range-custom-height::-moz-range-thumb{
+  display: none !important;
+  
+}
+.ImgIcon ion-checkbox{
+  display: none;
+}
+#upload{
+  display: none;
+}
+.uploadPicture-button {
+  position: relative;
+  overflow: hidden;
+}
+.uploadPicture-button .UploadBtn {
+  display: inline-block;
+  padding: 8px 38px;
+  background-color: #0000008f;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+#fileUpload input, #NbUpload input {
+  max-width: 180px;
+  height: 29px;
+  margin-top: 10px;
+  margin-bottom: 0px !important;
+  outline: none;
+  border: none;
+}
+.uploadPicture-button input[type=file] {
+  font-size: 100px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
+}
+.uploadPicture-button ion-input{
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  max-width: 180px;
+  background-color: #ccc;
+  margin-top: 10px;
+}
