--- a/src/theme/global.css
+++ b/src/theme/global.css
@@ -2861,6 +2861,7 @@ ul.Recipe-Star li {
   font-size: 12px;
   color: #ff0000;
 }
+
 /* NutribuddyStart */
 .ProgressBar {
   display: flex;
@@ -2885,20 +2886,7 @@ ul.Recipe-Star li {
   margin: auto;
   width: 100%;
 }
-/* .OTPverify {
-  display: flex;
-  align-items: center;
-  justify-content: left;
-  gap: 12px;
-}
-.OTPverify ion-input {
-  border: 1px solid #ccc;
 
-  text-align: center;
-}
-.OTPverify input {
-  padding: 10px !important;
-} */
 label.N-EditProfile {
   width: 30px;
   height: 30px;
@@ -2984,8 +2972,16 @@ label.N-EditProfile {
   background-color: #ffa500 !important;
   color: #fff;
 }
-.Orangebtn ion-icon{
-  padding: 20px;
+.ImgBtn {
+  background-color: #ffa500;
+  border-radius: 10px;
+  color: #fff !important;
+  display: flex;
+  padding: 8px;
+}
+.ImgBtn ion-icon{
+  color: #fff;
+  font-size: 40px !important;
 }
 .SkipBtn{
   display: flex;
@@ -3037,10 +3033,16 @@ label.N-EditProfile {
 .StatementInfo {
   white-space: break-spaces !important;
 }
-.ImgCheck ion-button {
-  width: 100px;
-  height: 70px;
-  border-radius: 10px;
+
+.ImgCheck label:before {
+  content: " ";
+  display: block;
+  position: absolute;
+  text-align: center;
+}
+.ImgCheck :checked + label img {
+  border: 2px solid #9a1504;
+  padding: 10px;
 }
 .UploadPicture ion-button{
 background-color: #ccc;
@@ -3065,9 +3067,79 @@ border-radius: 10px;
   font-size: 14px;
   padding-top: 5px;
 }
-.ImgCheck ion-checkbox{
+.ProgressBar ion-range{
+  width: 100%;
+}
+.range-custom-height {
+  height: 10px;
+  color: red;
+}
+.range-custom-height::-moz-range-thumb{
+  display: none !important;
+  
+}
+.ImgIcon input[type="checkbox"]{
   display: none;
 }
+.ImgIcon :checked + label ion-icon {
+  border: 2px solid #000;
+}
+
+.ImgIcon label:before {
+  content: " ";
+  display: block;
+  position: absolute;
+  padding: 10px;
+}
+.ImgIcon ion-text {
+  white-space: normal;
+  font-size: 14px;
+  padding-top: 5px;
+}
+#upload{
+  display: none;
+}
+.uploadPicture-button {
+  position: relative;
+  overflow: hidden;
+}
+.uploadPicture-button .UploadBtn {
+  display: inline-block;
+  padding: 8px 38px;
+  background-color: #0000008f;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+#fileUpload input, #NbUpload input {
+  max-width: 180px;
+  height: 29px;
+  margin-top: 10px;
+  margin-bottom: 0px !important;
+  outline: none;
+  border: none;
+}
+.uploadPicture-button input[type=file] {
+  font-size: 100px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
+}
+.uploadPicture-button ion-input{
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  max-width: 180px;
+  background-color: #ccc;
+  margin-top: 10px;
+}
+.ImgIcon label{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+/* NutribuddyEnd */
+
 /* Add product Modal start */
 
 .addCartModal {
@@ -3124,62 +3196,6 @@ border-radius: 10px;
 .blank-btn::part(native) {
   padding: 0;
 }
-/* Add product Modal end */
-.ProgressBar .no-thumb::-webkit-slider-thumb {
-  display: none;
-}
-
-.ProgressBar ion-range{
-  width: 100%;
-}
-.range-custom-height {
-  height: 10px;
-  color: red;
-}
-.range-custom-height::-moz-range-thumb{
-  display: none !important;
-  
-}
-.ImgIcon ion-checkbox{
-  display: none;
-}
-#upload{
-  display: none;
-}
-.uploadPicture-button {
-  position: relative;
-  overflow: hidden;
-}
-.uploadPicture-button .UploadBtn {
-  display: inline-block;
-  padding: 8px 38px;
-  background-color: #0000008f;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-#fileUpload input, #NbUpload input {
-  max-width: 180px;
-  height: 29px;
-  margin-top: 10px;
-  margin-bottom: 0px !important;
-  outline: none;
-  border: none;
-}
-.uploadPicture-button input[type=file] {
-  font-size: 100px;
-  position: absolute;
-  left: 0;
-  top: 0;
-  opacity: 0;
-}
-.uploadPicture-button ion-input{
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-  max-width: 180px;
-  background-color: #ccc;
-  margin-top: 10px;
-}
 
 .numCounter {
   position: relative;
@@ -3195,4 +3211,12 @@ border-radius: 10px;
   min-width: 21px;
   color: #fff;
   font-size: 9px;
+}
+
+/* submit-articals */
+.N-profileInput ion-textarea {
+  border: 1px solid #ccc;
+}
+.N-profileInput ion-select{
+  border: 1px solid #ccc;
 }
