--- a/src/theme/global.css
+++ b/src/theme/global.css
@@ -845,16 +845,19 @@ iframe {
   font-size: 8px;
   background-color: #cccccc36;
 }
+
 .BrandQnty {
   display: flex;
   align-items: start;
   gap: 30px;
 }
+
 .BrandName {
   display: flex;
   flex-direction: column;
   row-gap: 5px;
 }
+
 .mr-auto {
   margin-right: auto;
 }
@@ -1355,6 +1358,7 @@ ion-button.button-outline {
   box-shadow: 0px -19px 10px #ccc;
   border-radius: 15px;
 }
+
 .Address {
   display: flex;
   flex-direction: column;
@@ -1362,6 +1366,7 @@ ion-button.button-outline {
   align-items: start;
   color: #000;
 }
+
 .FlexCol {
   flex-direction: column;
   justify-content: flex-start;
@@ -1611,7 +1616,7 @@ ion-button.button-outline {
 }
 
 /* Edit Profile */
-.profile-upload > input {
+.profile-upload>input {
   display: none;
 }
 
@@ -2868,7 +2873,8 @@ ul.Recipe-Star li {
   flex-direction: column;
   align-items: end;
 }
-.RangeTypelabel{
+
+.RangeTypelabel {
   display: flex;
   justify-content: end;
   align-items: end;
@@ -2877,9 +2883,11 @@ ul.Recipe-Star li {
 .N-profileInput ion-input {
   border: 1px solid #ccc;
 }
+
 .N-profileInput ion-select {
   border: 1px solid #ccc;
 }
+
 .N-profileInput ion-button {
   background-color: #f0ad4e;
   color: #fff;
@@ -2897,9 +2905,11 @@ label.N-EditProfile {
   align-items: center;
   justify-content: center;
 }
+
 .N-EditProfile .ProfileImg {
   border-radius: 50% !important;
 }
+
 .N-ProfileEdit img {
   max-width: 13px;
   width: 100%;
@@ -2910,21 +2920,27 @@ label.N-EditProfile {
   margin-left: 138px;
   top: 89px;
 }
+
 .N-VegNon ion-label {
   padding-right: 10px;
 }
+
 .N-profileInput {
   margin: 10px 0px;
 }
+
 .N-profileInput ion-label {
   padding: 10px 0px;
 }
+
 .N-profileInput ion-input {
   margin-top: 10px;
 }
+
 ::-webkit-scrollbar {
   display: none;
 }
+
 .FabBtn {
   border: 1px solid #ccc;
   display: flex;
@@ -2932,12 +2948,14 @@ label.N-EditProfile {
   justify-content: center;
   padding: 7px;
 }
+
 .FabBtn ion-button {
   background-color: #e7e6e8 !important;
   border-radius: 55%;
   padding: 17px -6px;
   width: 50px;
 }
+
 .FabBtn ion-button ion-icon {
   color: #000;
 }
@@ -2948,30 +2966,35 @@ label.N-EditProfile {
   padding: 5px;
   color: #fff;
 }
+
 .AllergyBox {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
-  align-items: center;
+  gap: 30px;
+  align-items: start;
 }
-.ImgIcon ion-icon{
-   padding:20px;
-    background-color: #9a1504;
-    border-radius: 10px;
-    font-size: 40px !important;
-    color: #fff !important;
-    
+
+.ImgIcon ion-icon {
+  padding: 20px;
+  background-color: #9a1504;
+  border-radius: 10px;
+  font-size: 40px !important;
+  color: #fff !important;
+
 }
+
 .ImgIcon ion-title {
   white-space: normal;
   font-size: 14px;
   padding-top: 5px;
   text-align: center;
 }
+
 .Orangebtn {
   background-color: #ffa500 !important;
   color: #fff;
 }
+
 .ImgBtn {
   background-color: #ffa500;
   border-radius: 10px;
@@ -2979,25 +3002,31 @@ label.N-EditProfile {
   display: flex;
   padding: 8px;
 }
-.ImgBtn ion-icon{
+
+.ImgBtn ion-icon {
   color: #fff;
   font-size: 40px !important;
 }
-.SkipBtn{
+
+.SkipBtn {
   display: flex;
   align-items: center;
   gap: 20px;
 }
-.bottomText span{
-  font-size:12px;
+
+.bottomText span {
+  font-size: 12px;
   padding-top: 3px;
 }
-.FillCheckBox input[type="checkbox"]{
-   display: none;
+
+.FillCheckBox input[type="checkbox"] {
+  display: none;
 }
-.FillCheckBox input[type="checkbox"]:focus{
+
+.FillCheckBox input[type="checkbox"]:focus {
   border: 2px solid red;
 }
+
 .DietPreFerns {
   display: flex;
   flex-wrap: wrap;
@@ -3006,30 +3035,34 @@ label.N-EditProfile {
   gap: 15px;
   width: 100%;
 }
-.FillCheckBox{
+
+.FillCheckBox {
   display: flex;
   align-items: center;
   flex-direction: column;
   gap: 5px;
-  
+
 }
-.FillCheckBox img{
+
+.FillCheckBox img {
   width: 100%;
   object-fit: cover;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
-.qwt-select{
+
+.qwt-select {
   width: 100%;
   border-radius: 0px;
 }
 
-.CardAdd{
+.CardAdd {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
   padding-bottom: 10px;
 }
+
 .StatementInfo {
   white-space: break-spaces !important;
 }
@@ -3040,48 +3073,57 @@ label.N-EditProfile {
   position: absolute;
   text-align: center;
 }
-.ImgCheck :checked + label img {
+
+.ImgCheck :checked+label img {
   border: 2px solid #9a1504;
   padding: 10px;
 }
-.UploadPicture ion-button{
-background-color: #ccc;
-border-radius: 10px;
+
+.UploadPicture ion-button {
+  background-color: #ccc;
+  border-radius: 10px;
 }
-.UploadPicture input[type="text"]{
+
+.UploadPicture input[type="text"] {
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
- margin-top: 10px;
+  margin-top: 10px;
 }
 
 .ImgCheck {
-    text-align: center;
-    max-width: 100px;
-    min-height: 110px;
+  text-align: center;
+  max-width: 100px;
+  min-height: 110px;
 }
 
 .ImgCheck ion-button ion-icon {
   font-size: 40px !important;
 }
+
 .ImgCheck ion-title {
   white-space: normal;
   font-size: 14px;
   padding-top: 5px;
 }
-.ProgressBar ion-range{
+
+.ProgressBar ion-range {
   width: 100%;
 }
+
 .range-custom-height {
   height: 10px;
   color: red;
 }
-.range-custom-height::-moz-range-thumb{
+
+.range-custom-height::-moz-range-thumb {
   display: none !important;
-  
+
 }
-.ImgIcon input[type="checkbox"]{
+
+.ImgIcon input[type="checkbox"] {
   display: none;
 }
-.ImgIcon :checked + label ion-icon {
+
+.ImgIcon :checked+label ion-icon {
   border: 2px solid #000;
 }
 
@@ -3091,18 +3133,28 @@ border-radius: 10px;
   position: absolute;
   padding: 10px;
 }
+
 .ImgIcon ion-text {
   white-space: normal;
+  max-width: 100px;
+  text-align: center;
   font-size: 14px;
   padding-top: 5px;
 }
-#upload{
+
+.ImgIcon {
+  width: calc(15% - -10px);
+}
+
+#upload {
   display: none;
 }
+
 .uploadPicture-button {
   position: relative;
   overflow: hidden;
 }
+
 .uploadPicture-button .UploadBtn {
   display: inline-block;
   padding: 8px 38px;
@@ -3112,7 +3164,9 @@ border-radius: 10px;
   border-radius: 4px;
   cursor: pointer;
 }
-#fileUpload input, #NbUpload input {
+
+#fileUpload input,
+#NbUpload input {
   max-width: 180px;
   height: 29px;
   margin-top: 10px;
@@ -3120,6 +3174,7 @@ border-radius: 10px;
   outline: none;
   border: none;
 }
+
 .uploadPicture-button input[type=file] {
   font-size: 100px;
   position: absolute;
@@ -3127,17 +3182,20 @@ border-radius: 10px;
   top: 0;
   opacity: 0;
 }
-.uploadPicture-button ion-input{
+
+.uploadPicture-button ion-input {
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   max-width: 180px;
   background-color: #ccc;
   margin-top: 10px;
 }
-.ImgIcon label{
+
+.ImgIcon label {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+
 /* NutribuddyEnd */
 
 /* Add product Modal start */
@@ -3217,6 +3275,12 @@ border-radius: 10px;
 .N-profileInput ion-textarea {
   border: 1px solid #ccc;
 }
-.N-profileInput ion-select{
+
+.N-profileInput ion-select {
   border: 1px solid #ccc;
+}
+/* Add product page start */
+.add-product-profile{
+  flex-wrap: wrap;
+  gap: 10px;
 }
